# trading212

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/t212/: config.py
tests/: test_config.py
