[project]
name = "t212"
version = "0.1.0"
description = "Trading212 automated trading client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
t212 = "t212.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t212"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=t212 --cov-report=term-missing"

[tool.coverage.run]
source = ["src/t212"]
